added links and img to footer. added tex to grid img. overall cleanup in css and html.

--- a/code/index.html
+++ b/code/index.html
@@ -62,6 +62,9 @@
             src="https://images.unsplash.com/photo-1513612254505-fb553147a2e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjV8fHN0cmF3YmVycmllc3xlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60" 
             alt="blue-berries">  
             <h2 class="news-grid-heading">“Don't Panic.”</h2> 
+            <p class="news-grid-article"> The Answer to the Great Question... Of Life, the Universe and Everything... Is...
+             Forty-two,' said Deep Thought, with infinite majesty and calm.""
+            <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">― read more.</span> </a></p>
         </div>
 
         <div class="news-grid-item">
@@ -69,6 +72,10 @@
           src="https://media.istockphoto.com/photos/fresh-strawberries-in-transparent-glass-bowl-top-view-healthy-food-on-picture-id1288144126?b=1&k=20&m=1288144126&s=170667a&w=0&h=Ko3kfCCwngKzzYhdUz0T4vr1MsTDUMKJ5EPGQ7rUO4w="
           alt="pink-berries">
           <h2 class="news-grid-heading">"I'd far rather be happy than right any day"</h2>
+          <p class="news-grid-article"> This planet has - or rather had - a problem, which was this: most of the people living on it were unhappy for pretty much of the time. 
+            Many solutions were suggested for this problem, but most of these were largely concerned with the movement of small green pieces of paper, 
+            which was odd because on the whole it wasn't the small green pieces of paper that were unhappy.
+           <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">― read more.</span> </a></p>
         </div>
 
         <div class="news-grid-item">
@@ -76,6 +83,10 @@
           src="https://images.unsplash.com/photo-1554118879-92093d4bc16e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHN0cmF3YmVycmllc3xlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60" 
           alt="tre-berries">
            <h2 class="news-grid-heading">Time is an illusion. Lunchtime doubly so.</h2>
+           <p class="news-grid-article"> Far out in the uncharted backwaters of the unfashionable end of the western spiral arm of the Galaxy lies a small unregarded yellow sun. 
+             Orbiting this at a distance of roughly ninety-two million miles is an utterly insignificant little blue green planet whose ape-descended life forms are so amazingly primitive 
+             that they still think digital watches are a pretty neat idea.
+           <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">― read more.</span> </a></p>
         </div>
 
         <div class="news-grid-item">
@@ -83,14 +94,38 @@
           src="https://images.unsplash.com/photo-1605674074867-e0b5333c72a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjE4fHxzdHJhd2JlcnJpZXN8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" 
           alt="half-berry">
           <h2 class="news-grid-heading">The ships hung in the sky in much the same way that bricks don't.</h2>
+          <p class="news-grid-article"> All through my life I've had this strange unaccountable feeling that something was going on in the world, something big, even sinister, and no one would tell me what it was."
+            "No," said the old man, "that's just perfectly normal paranoia. Everyone in the Universe has that.
+          <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">― read more.</span> </a></p>
         </div>
         </div>
 
       </aside>
     </section>
+    <section>
+         <div class="company-name-container">
+      <p class="company-name">STRAWBERRY NEWS pbl</p>
+    </div> 
+  </section>
+
     <footer class="footer">
-      <p>STRAWBERRY NEWS pbl</p>
-    </footer>
+      <a href="https://www.facebook.com/"> 
+        <img class="socialmedia-icon" 
+            src="https://cdn1.iconfinder.com/data/icons/social-media-rounded-corners/512/Rounded_Facebook_svg-128.png" 
+            alt="Facebook icon"></a>
+      <a href="https://www.instagram.com/"> 
+        <img class="socialmedia-icon" 
+            src="https://cdn1.iconfinder.com/data/icons/social-media-rounded-corners/512/Rounded_Instagram_svg-128.png" 
+            alt="Instagram icon"></a>
+      <a href="https://www.pinterest.com/"> 
+        <img class="socialmedia-icon" 
+            src="https://cdn1.iconfinder.com/data/icons/social-media-rounded-corners/512/Rounded_Pinterest2_svg-128.png" 
+            alt="pinterest icon"></a>   
+      <a href="https://www.linkedin.com/"> 
+              <img class="socialmedia-icon" 
+                  src="https://cdn1.iconfinder.com/data/icons/social-media-rounded-corners/512/Rounded_Linkedin2_svg-128.png" 
+                  alt="Linkedin icon"></a>             
+      </footer>
   </body>
 </html>
 
