Applied hover to navbar-links and read-more links

--- a/code/index.html
+++ b/code/index.html
@@ -142,7 +142,7 @@
 
     <!-- End with a footer  -->
     <footer>
-      <p>Created by Arianna Allahyar.</p>
+      <p>Created by <a class="linkedin" href="https://www.linkedin.com/in/ariannaallahyar/">Arianna Allahyar</a> | 2022</p>
     </footer>
   </body>
 </html>
