--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,68 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul class="nav-bar">
+          <div class="logo">Minimalisen</div>
+          <li class="nav-item">
+            <a href="#">Articles</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Resources</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <button>Contact</button>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="hero">
+        <h1>Ready for spring cleaning?</h1>
+        <h2>100 Things to declutter this year</h2>
+        <button>Continue reading &rarr;</button>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+      <div class="article">
+        <img src="./images/office.jpg">
+        <h2>Books to read on minimalism</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="article">
+        <img src="./images/cups.jpg">
+        <h2>30-day minimalism game</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="article">
+        <img src="./images/books.jpg">
+        <h2>How much stuff is enough?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="article">
+        <img src="./images/wall.jpg">
+        <h2>Dealing with digital clutter</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
     </section>
+    <footer>Lisen Lundgren - project-news-site
+    </footer>
   </body>
 </html>
