Article text added

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
-
   </head>
   <body>
     <header>
@@ -37,9 +36,10 @@
     <section class="big-news">
       <img class="headline-img" src="images/vitaminh.jpg" alt="hot sauce bottle">
       <div class="headline-content">
-        <h1> Very. Big. News. A big fcking deal.</h1>
+        <h1> It hurts so good.</h1>
         <p class="date">January 21, 2022</p>
-        <p>Have you taken your daily dose of vitamins? This bottle of goodness is occasionally referred to as the cure to the common cold. 
+        <p>Have you taken your daily dose of vitamins?
+          This bottle of goodness is occasionally referred to as the cure to the common cold. 
           New on the shelves this week is this limited edition hot sauce, Vitamin H. 
           As the label promises, a habanero a day keeps the doctor away. Dare to try? 
           Your tacos will thank you. Get it before it's gone.
@@ -59,7 +59,7 @@
         <div class="article-text">
           <h2>The ingredient you least expected</h2>
           <p class="date">January 21, 2022</p>
-          <p>When you dine at the world's best restaurant, what do you expect to find on the menu? Surely reindeer penis is not your first guess. But, let's not forget, this is Noma.
+          <p>When you dine at the world's best restaurant, what do you expect to be served? Surely reindeer penis is not your first guess, but this is Noma we're talking about.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
@@ -73,7 +73,8 @@
         <div class="article-text">
           <h2>Soak up the sun with these summery hops</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+          <p>Sunny skies are in the forecast! Grab your sunglasses and head to one of these 
+            three favorite spots to soak up som rays while sipping on local brews.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
@@ -87,7 +88,8 @@
         <div class="article-text">
           <h2>Who knew salad could make you cry</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+          <p>Don't be fooled by this dish's simple name, "Summer squash and berries."
+            This elegant salad is the highlight of the summer and certain to bring tears of joy.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
@@ -101,7 +103,8 @@
         <div class="article-text">
           <h2>Pop-up onigiri shop: limited time only</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+          <p>One of Japan's favorite snacks will be making an appearance next week. 
+            Make sure not to miss it.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
@@ -115,7 +118,7 @@
         <div class="article-text">
           <h2>Tips to find the tastiest market tomatoes</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+          <p>Tired of tasteless tomatoes? We are here to help.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
@@ -129,7 +132,7 @@
         <div class="article-text">
           <h2>Say cheese! Here is your weekend hangover fix</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+          <p>Let's be honest, there's no such thing as too much cheese. Your stomach will thank you later.
             <a class="news-read-more" href="#">
               <span class="read-more">
                 Read more &#10154;
