styled the icons

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,8 @@
     <title>Project 2: The News Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="/css/all.css">
+    <!--icon script-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
     <body>
@@ -26,7 +27,7 @@
             <div class="hamburger-nav-mobile">
                 <input type="checkbox" id="menu-toggle"/>
                 <label id="menu-label" for="menu-toggle">
-                    <i class="fas fa-bars fa-2x menu-icon"></i>
+                    <i class="fas fa-bars"></i>
                 </label>
                 <ul id="dropdown-menu">
                     <li><a href="https://openpuppies.com" target="-blank">More news</a></li>
