--- a/code/index.html
+++ b/code/index.html
@@ -36,11 +36,11 @@
     <section class="big-news">
       <img class="headline-img" src="images/vitaminh.jpg" alt="hot sauce bottle">
       <div class="headline-content">
-        <h1> It hurts so good.</h1>
+        <h1>New hot sauce comes with a warning label</h1>
         <p class="date">January 21, 2022</p>
         <p>Have you taken your daily dose of vitamins?
-          This bottle of goodness is occasionally referred to as the cure to the common cold. 
-          New on the shelves this week is this limited edition hot sauce, Vitamin H. 
+          This bottle of goodness is occasionally referred to as "the cure to the common cold."
+          New on the shelves this week is this limited edition, small batch hot sauce - Vitamin H. 
           As the label promises, a habanero a day keeps the doctor away. Dare to try? 
           Your tacos will thank you. Get it before it's gone.
           <a class="news-read-more" href="#">
