changed main-news and other-news sections

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Your Life Science News</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,10 +14,10 @@
 
 <body>
   <div class="container">
-    <header>
+    <header class="header">
       <div class="newssite-name">
         <img class="logo" src="https://img.icons8.com/ios/50/000000/dna-helix.png" alt="logo" />
-        <h1>LifeScienceNews</h1>
+        <h1>Life Science News</h1>
       </div>
       <nav class="navbar">
         <ul>
