upload html and css code after changing laptop, reinstalled vscode and finally made the terminal work

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,76 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+  
   <body>
+
+<!-- LOGO AND NAV -->
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img src="logo.svg">
+      <div>
+        <nav>
+          <a href="https://sv.wikipedia.org/wiki/Gurka">GURKA</a>
+          <a href="https://sv.wikipedia.org/wiki/Squash_(v%C3%A4xt)">ZUCCHINI</a>
+          <a href="https://sv.wikipedia.org/wiki/Paprika">PAPRIKA</a>
+        </nav>
+     </div>
     </header>
 
+
+<!-- BIG NEWS -->
     <section class="big-news">
-      <!-- The big news content -->
+      <a href="https://sv.wikipedia.org/wiki/Gurka">
+        <img src="https://cdn.intechopen.com/books/images_new/9704.jpg" alt="gurka">
+      </a>
+      <div class="top-text-box">
+        <h1>Gurka</h1>
+        <p class="top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo sint molestiae corrupti ab, cupiditate illum ut similique ad pariatur earum sunt, quam laborum quisquam, fuga quidem labore soluta tempora consectetur!</p>
+       </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+<!-- ARTICLES  -->
+    <section class="articles">
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
+      <article>
+        <a href="https://sv.wikipedia.org/wiki/Gurka">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSZjvjC5Lw6ptf1yfNUGAMUbYNq-t7GsXxXw&usqp=CAU" alt="">
+        </a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam dolores repudiandae</p>
+      </article>
     </section>
+
   </body>
 </html>
