added playsinline for IOS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </header>
     
-    <video src="Video1.mp4" muted loop autoplay></video>
+    <video src="Video1.mp4" muted loop autoplay controls playsinline></video>
     <div class="overlay"></div>
 
       
