added main news and animation

--- a/code/index.html
+++ b/code/index.html
@@ -45,6 +45,15 @@
     <img src="spiral.gif" alt="spiral"/>
   </div>
 
+  <div class="big-image">
+    <img src="ullman2.png" alt="Diary Room by Philip Ullman"/>
+  </div>
+
+  <div class="big-text">
+    <h2>Interview with Philip Ullman</h2>
+    <h3>About new videowork Diary Room</h3>
+  </div>
+
 </section>
 
 <!--A section for the regular news articles-->
