removed not working links on mobile

--- a/code/index.html
+++ b/code/index.html
@@ -30,9 +30,9 @@
                     <i class="fas fa-bars"></i>
                 </label>
                 <ul id="dropdown-menu">
-                    <li><a href="https://openpuppies.com" target="-blank">More news</a></li>
-                    <li><a href="https://openpuppies.com" target="-blank">About</a></li>
-                    <li><a href="https://openpuppies.com" target="-blank">Contact us</a></li>
+                    <li><a href="#" target="-blank">More news</a></li>
+                    <li><a href="#" target="-blank">About</a></li>
+                    <li><a href="#" target="-blank">Contact us</a></li>
                 </ul>
             </div>
     
