last changes with width, positions, hover effects etc

--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
         <a class="nav-links" href="https://www.nasa.gov/nasalive" target="_blank">NASA Live</a>
         <a class="nav-links" href="https://www.nasa.gov/kidsclub/index.html" target="_blank">NASA Kids Club</a>
       </nav>
-      <!-- Some kind of logo and navbar -->
+     
     </header>
 
 
@@ -50,10 +50,9 @@
                </a>
           </div>
           <div class="big-item2">
-              <img class="big-image" src="images/kid-universe.jpg" alt=picture of a galaxy/>
+              <a href=""><img class="big-image" src="images/kid-universe.jpg" alt=picture of a galaxy/></a>
           </div>
       
-      <!-- The big news content -->
     </section>
 
 
