added box-shadow and pointers for my headings

--- a/code/index.html
+++ b/code/index.html
@@ -48,7 +48,7 @@
 
       <div class="other-news-box">
         <img src="img/culturedcells.png" alt="Image of cultured cells">
-        <h2>Copenhagen - new center for stemcells resarch</h2>
+        <h2>Copenhagen - new center for stemcell resarch</h2>
       </div>
 
       <div class="other-news-box">
