fix some of my text and read me

--- a/code/index.html
+++ b/code/index.html
@@ -51,10 +51,7 @@
       <h2>The pandemic causes coffee shortage</h2>
       <p>
         The demand for coffee is avalancelike! Since the pandemic started the expert in the field have notice a
-        troubiling discovery. The coffee growers are alre with that aldready get Sed odio quam, lobortis a ex et, cursus
-        faucibus leo. Vestibulum cursus lacinia tortor, eget commodo felis laoreet non. Mauris ornare est eu tincidunt
-        maximus. Quisque vulputate porta magna a egestas. Aenean scelerisque eros id porttitor pharetra. Vivamus nec
-        nisi vehicula, bibendum metus in, cursus magna. Etiam varius ultrices diam, nec dignissim lacus ullamcorper ac.
+        troubiling discovery. The coffee growers has aldready been hit hard by the climat crisis!
       </p>
     </div>
     <div class="small-news-container">
@@ -64,31 +61,31 @@
         </figure>
         <figure class="container">
           <img src="images/coffeewraping.jpg" alt="The Coffee on hike">
-          <h3>jfjfjfj</h3>
+          <h3>Teens drink less and less coffee</h3>
         </figure>
           <figure class="container">
           <img src="images/manycupsofcoffee.jpg" alt="The Coffee on hike">
-          <h3>hfhfhfh</h3>
+          <h3>Climat crisis has hit the coffee industry hard</h3>
         </figure>
         <figure class="container">
           <img src="images/coffeeshop.jpg" alt="More Coffee">
-          <h3>fhfhfhfhf</h3>
+          <h3>New study shows that coffee can cure cancer!</h3>
         </figure>
         <figure class="container">
           <img src="images/outdoorcoffee.jpg" alt="light coffee picture">
-          <h3>hfhfhfhf</h3>
+          <h3>Coffee grounds new trend in skin care</h3>
         </figure>
         <figure class="container">
           <img src="images/bedcoffee.jpg" alt="light coffee picture">
-          <h3>fhfhfhfhf</h3>
+          <h3>Coffee can heal your broken hart-true or false?</h3>
         </figure>
         <figure class="container">
           <img src="images/what'syourstory.jpg" alt="light coffee picture">
-          <h3>gjgjgjgj</h3>
+          <h3>Coffe the black gold</h3>
         </figure>
         <figure class="container">
           <img src="images/meeting.jpg" alt="light coffee picture">
-          <h3>jhjhjhjhj</h3>
+          <h3>What type of coffee are you</h3>
         </figure>
     </div>
 
@@ -108,7 +105,7 @@
 <footer>
   <div class="footer">
     <p>
-      Terese Claesson.
+      All rights reserved to Terese Claesson AB
     </p>
     <button type="button" onclick="alert('Coffee is the best')">click me!</button>
   </div>
